--- a/config/config.json
+++ b/config/config.json
@@ -16,10 +16,11 @@
     "dialect": "postgres"
   },
   "production": {
-    "username": "root",
-    "password": null,
-    "database": "database_production",
+    "username": "timothy",
+    "password": "plati442",
+    "database": "smarthiredb",
     "host": "127.0.0.1",
-    "dialect": "mysql"
+    "dialect": "postgres",
+    "use_env_variable": "DATABASE_URL"
   }
 }
