installed nodemon to fix app crashing in production

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "SmartHire-API",
   "version": "1.0.0",
   "description": "This is a simple Skill and Goal Review Manangement solution.",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start:dev": "nodemon ./bin/www",
